// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App default 1`] = `
<div>
  App
</div>
`;

exports[`Storyshots Player default 1`] = `
<div
  className="container"
>
  <ul>
    <li>
      Stack: 
      100
    </li>
    <li>
      Bet: 
      0
    </li>
  </ul>
</div>
`;

`;

exports[`Storyshots Player with name 1`] = `
<div
  className="container"
>
  <h3
    className="name"
  >
    Button
  </h3>
  <ul>
    <li>
      Stack: 
      100
    </li>
    <li>
      Bet: 
      0
    </li>
  </ul>
</div>
`;
